# llestrade

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUGGING_SUMMARIZATION.md  IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  README.md  REORGANIZATION_SUMMARY.md  app_config.py  app_config_backup.py  app_settings.json  check_azure_sdk.py  config.py  config.template.env  convert_to_pyside6.py  create_test_pdf.py  debug_summarization.py  debugging_enhancement_plan.md  direct_test.py  file_utils.py  fix_pyside6_signals.py  ingest_markdown.py  llm_utils.py  llm_utils_compat.py  main.py  main_legacy.py  main_new.py  pdf_utils.py  prompt_manager.py  pyproject.toml  requirements.txt  run.py  run_app.sh  run_debug.sh  run_new_ui.sh  setup_env.py  startup_config.py  test.md  (+21 more)
diagnosis/: test_problematic_diagnosis.md
docs/: DESIGN_DOCUMENT.md  IMPLEMENTATION_GUIDE.md  REWRITE_SPECIFICATION.md  architecture_comparison.md  bulk_analysis_plan.md  bulk_operations_plan.md  dashboard_maintainability_refactor_plan.md  dashboard_refactor_plan.md  distribution.md  feature_ideas.md  hierarchical_reduction_implementation.md  implementation_plan.md  memory_safe_example.py  migration_summary_2025-07-03.md  next_steps_2025-01-11.md  placeholder_reference.md  progress.md  progress_2025-01-11.md  project_placeholder_unification_plan.md  roadmap.md  simplified_workflow.md  unified_implementation_plan.md  work_plan.md
legacy/: llm_utils_legacy.py  mac_pyqt6_test.py  main-pyqt6.py  main-tkinter.py  main_app.py
lib/: files.py
llm/: __init__.py  base.py  chunking.py  tokens.py
(+312 files in other folders)
