[project]
name = "forensic-psych-report-drafter"
version = "0.1.0"
description = "An experimental forensic report drafter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "azure-ai-documentintelligence>=1.0.2",
    "langchain>=0.3.20",
    "langchain-text-splitters>=0.3.6",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "pyqt6>=6.9.0",
    "python-dotenv>=1.1.0",
]
