[project]
name = "forensic-psych-report-drafter"
version = "0.1.0"
description = "An experimental forensic report drafter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.51.0",
    "azure-ai-documentintelligence>=1.0.2",
    "click>=8.1.8",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.20",
    "langchain-text-splitters>=0.3.6",
    "openai>=1.84.0",
    "pymupdf>=1.25.5",
    "pyside6>=6.9.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
